--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@
         <div class="container">
             <h2 style="font-size: 28px; margin-bottom: 20px;">まずはこちらの動画をご覧ください</h2>
             <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; margin: 20px 0; border-radius: 10px; border: 3px solid #ddd; box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);">
-                <iframe src="https://utage-system.com/video/UUTiXxutDAwJ" 
+                <iframe src="https://utage-system.com/video/4aLBGzjAUmwA" 
                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;" 
                         allowfullscreen>
                 </iframe>
